--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "* Студент: [Lidaaaaa](https://up.htmlacademy.ru/nodejs/3/user/1741079). * Наставник: `Неизвестно`.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/service/service.js",
+    "start": "nodemon ./src/service/service.js --server 3000",
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/"
   },
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/Lidaaaaa/1741079-buy-and-sell-3#readme",
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-htmlacademy": "0.6.0"
+    "eslint-config-htmlacademy": "0.6.0",
+    "nodemon": "2.0.12"
   },
   "dependencies": {
     "chalk": "4.1.2"
