--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,5 +4,8 @@ parserOptions:
 env:
   es6: true
   node: true
+  jest: true
 
 extends: "htmlacademy/node"
+
+ignorePatterns: "**/express/public/**/*.js"
