--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production LOG_LEVEL=error nodemon ./src/service/service.js --server 3000",
-    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon ./src/service/service.js --server 3000",
+    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon ./src/service/service.js --server 3000 | pino-pretty",
     "start-front-server": "nodemon ./src/express/express.js",
     "test": "npm run eslint && npm run jest",
     "eslint": "eslint --ext .js src/",
