--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "* Студент: [Lidaaaaa](https://up.htmlacademy.ru/nodejs/3/user/1741079). * Наставник: `Неизвестно`.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production LOG_LEVEL=error nodemon ./src/service/service.js --server 3000",
-    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon ./src/service/service.js --server 3000 | pino-pretty",
+    "start": "cross-env NODE_ENV=production LOG_LEVEL=error node ./src/service/service.js --server 3000",
+    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server 3000 | pino-pretty",
     "start-front-server": "nodemon ./src/express/express.js",
     "test": "npm run eslint && npm run jest",
     "eslint": "eslint --ext .js src/",
@@ -27,16 +27,20 @@
     "jest": "27.3.1",
     "nodemon": "2.0.12",
     "pino-pretty": "7.2.0",
+    "sqlite3": "5.0.2",
     "supertest": "6.1.6"
   },
   "dependencies": {
     "axios": "0.24.0",
     "chalk": "4.1.2",
     "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "multer": "1.4.3",
     "nanoid": "3.1.30",
+    "pg": "8.7.1",
     "pino": "7.2.0",
-    "pug": "3.0.2"
+    "pug": "3.0.2",
+    "sequelize": "6.12.0-beta.1"
   }
 }
