--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "* Студент: [Lidaaaaa](https://up.htmlacademy.ru/nodejs/3/user/1741079). * Наставник: `Неизвестно`.",
   "main": "index.js",
   "scripts": {
-    "start": "npm run start::debug & npm run start-front-server",
-    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server 3000 | pino-pretty",
+    "start": "npm run start-servers",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-back-server": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server 3000 | pino-pretty",
     "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
     "build": "cross-env NODE_ENV=production LOG_LEVEL=error node ./src/service/service.js --server 3000",
     "test": "npm run eslint && npm run jest",
@@ -35,6 +36,7 @@
     "axios": "0.24.0",
     "bcrypt": "5.0.1",
     "chalk": "4.1.2",
+    "concurrently": "7.0.0",
     "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
     "csurf": "1.11.0",
