--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "* Студент: [Lidaaaaa](https://up.htmlacademy.ru/nodejs/3/user/1741079). * Наставник: `Неизвестно`.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production LOG_LEVEL=error node ./src/service/service.js --server 3000",
-    "start::debug": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server 3000 | pino-pretty",
-    "start-front-server": "nodemon ./src/express/express.js",
+    "start": "npm run start-servers",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-back-server": "cross-env NODE_ENV=development LOG_LEVEL=info nodemon -r dotenv/config ./src/service/service.js --server 3000 | pino-pretty",
+    "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
+    "build": "cross-env NODE_ENV=production LOG_LEVEL=error node ./src/service/service.js --server 3000",
     "test": "npm run eslint && npm run jest",
     "eslint": "eslint --ext .js src/",
     "jest": "jest"
@@ -34,15 +36,19 @@
     "axios": "0.24.0",
     "bcrypt": "5.0.1",
     "chalk": "4.1.2",
+    "concurrently": "7.0.0",
+    "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
+    "csurf": "1.11.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "joi": "17.6.0",
     "multer": "1.4.3",
     "nanoid": "3.1.30",
     "pg": "8.7.1",
     "pino": "7.2.0",
     "pug": "3.0.2",
-    "sequelize": "6.12.0-beta.1"
+    "sequelize": "6.16.1"
   }
 }
